--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,13 @@ body {
 }
 
 .product, .cart-item {
-    border: 5px solid #ADD8E6;
+    border: 5px solid #74BBFB;
     padding: 80px;
     margin-bottom: 80px;
 }
 
 button {
-    background-color: #FFE5B4;
+    background-color: #EBB8DD;
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -37,5 +37,5 @@ button {
 }
 
 button:hover {
-    background-color: #808080;
+    background-color: #CAE7D3;
 }
