--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ dbody {
 
 button {
     background-color: #BF2C34;
-    color: #fff;
+    color: #ccc;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
